// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dots /> matches the snapshot 1`] = `
<WithStyles(Dots)
  count={3}
  index={0}
>
  <Dots
    classes={
      Object {
        "dot": "Dots-dot-3",
        "dotOuter": "Dots-dotOuter-2",
        "dots": "Dots-dots-1",
      }
    }
    count={3}
    dotColor="#fff"
    dotSize={8}
    index={0}
  >
    <div
      style={
        Object {
          "width": 48,
        }
      }
    >
      <div
        className="Dots-dots-1"
      >
        <div
          className="Dots-dotOuter-2"
          key="0"
          onClick={[Function]}
          style={
            Object {
              "cursor": "inherit",
              "float": "left",
              "height": 8,
              "left": 0,
              "padding": 4,
              "position": "absolute",
              "width": 8,
            }
          }
        >
          <WithStyles(Paper)
            className="Dots-dot-3"
            elevation={0}
            square={false}
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 16,
                "height": 8,
                "opacity": 0,
                "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
                "width": 8,
              }
            }
          >
            <Paper
              className="Dots-dot-3"
              classes={
                Object {
                  "elevation0": "MuiPaper-elevation0-6",
                  "elevation1": "MuiPaper-elevation1-7",
                  "elevation10": "MuiPaper-elevation10-16",
                  "elevation11": "MuiPaper-elevation11-17",
                  "elevation12": "MuiPaper-elevation12-18",
                  "elevation13": "MuiPaper-elevation13-19",
                  "elevation14": "MuiPaper-elevation14-20",
                  "elevation15": "MuiPaper-elevation15-21",
                  "elevation16": "MuiPaper-elevation16-22",
                  "elevation17": "MuiPaper-elevation17-23",
                  "elevation18": "MuiPaper-elevation18-24",
                  "elevation19": "MuiPaper-elevation19-25",
                  "elevation2": "MuiPaper-elevation2-8",
                  "elevation20": "MuiPaper-elevation20-26",
                  "elevation21": "MuiPaper-elevation21-27",
                  "elevation22": "MuiPaper-elevation22-28",
                  "elevation23": "MuiPaper-elevation23-29",
                  "elevation24": "MuiPaper-elevation24-30",
                  "elevation3": "MuiPaper-elevation3-9",
                  "elevation4": "MuiPaper-elevation4-10",
                  "elevation5": "MuiPaper-elevation5-11",
                  "elevation6": "MuiPaper-elevation6-12",
                  "elevation7": "MuiPaper-elevation7-13",
                  "elevation8": "MuiPaper-elevation8-14",
                  "elevation9": "MuiPaper-elevation9-15",
                  "root": "MuiPaper-root-4",
                  "rounded": "MuiPaper-rounded-5",
                }
              }
              component="div"
              elevation={0}
              square={false}
              style={
                Object {
                  "backgroundColor": "#fff",
                  "borderRadius": 16,
                  "height": 8,
                  "opacity": 0,
                  "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
                  "width": 8,
                }
              }
            >
              <div
                className="MuiPaper-root-4 MuiPaper-elevation0-6 MuiPaper-rounded-5 Dots-dot-3"
                style={
                  Object {
                    "backgroundColor": "#fff",
                    "borderRadius": 16,
                    "height": 8,
                    "opacity": 0,
                    "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
                    "width": 8,
                  }
                }
              />
            </Paper>
          </WithStyles(Paper)>
        </div>
        <div
          className="Dots-dotOuter-2"
          key="1"
          onClick={[Function]}
          style={
            Object {
              "cursor": "inherit",
              "float": "left",
              "height": 8,
              "left": 16,
              "padding": 4,
              "position": "absolute",
              "width": 8,
            }
          }
        >
          <WithStyles(Paper)
            className="Dots-dot-3"
            elevation={0}
            square={false}
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 16,
                "height": 8,
                "opacity": 0.5,
                "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
                "width": 8,
              }
            }
          >
            <Paper
              className="Dots-dot-3"
              classes={
                Object {
                  "elevation0": "MuiPaper-elevation0-6",
                  "elevation1": "MuiPaper-elevation1-7",
                  "elevation10": "MuiPaper-elevation10-16",
                  "elevation11": "MuiPaper-elevation11-17",
                  "elevation12": "MuiPaper-elevation12-18",
                  "elevation13": "MuiPaper-elevation13-19",
                  "elevation14": "MuiPaper-elevation14-20",
                  "elevation15": "MuiPaper-elevation15-21",
                  "elevation16": "MuiPaper-elevation16-22",
                  "elevation17": "MuiPaper-elevation17-23",
                  "elevation18": "MuiPaper-elevation18-24",
                  "elevation19": "MuiPaper-elevation19-25",
                  "elevation2": "MuiPaper-elevation2-8",
                  "elevation20": "MuiPaper-elevation20-26",
                  "elevation21": "MuiPaper-elevation21-27",
                  "elevation22": "MuiPaper-elevation22-28",
                  "elevation23": "MuiPaper-elevation23-29",
                  "elevation24": "MuiPaper-elevation24-30",
                  "elevation3": "MuiPaper-elevation3-9",
                  "elevation4": "MuiPaper-elevation4-10",
                  "elevation5": "MuiPaper-elevation5-11",
                  "elevation6": "MuiPaper-elevation6-12",
                  "elevation7": "MuiPaper-elevation7-13",
                  "elevation8": "MuiPaper-elevation8-14",
                  "elevation9": "MuiPaper-elevation9-15",
                  "root": "MuiPaper-root-4",
                  "rounded": "MuiPaper-rounded-5",
                }
              }
              component="div"
              elevation={0}
              square={false}
              style={
                Object {
                  "backgroundColor": "#fff",
                  "borderRadius": 16,
                  "height": 8,
                  "opacity": 0.5,
                  "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
                  "width": 8,
                }
              }
            >
              <div
                className="MuiPaper-root-4 MuiPaper-elevation0-6 MuiPaper-rounded-5 Dots-dot-3"
                style={
                  Object {
                    "backgroundColor": "#fff",
                    "borderRadius": 16,
                    "height": 8,
                    "opacity": 0.5,
                    "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
                    "width": 8,
                  }
                }
              />
            </Paper>
          </WithStyles(Paper)>
        </div>
        <div
          className="Dots-dotOuter-2"
          key="2"
          onClick={[Function]}
          style={
            Object {
              "cursor": "inherit",
              "float": "left",
              "height": 8,
              "left": 32,
              "padding": 4,
              "position": "absolute",
              "width": 8,
            }
          }
        >
          <WithStyles(Paper)
            className="Dots-dot-3"
            elevation={0}
            square={false}
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 16,
                "height": 8,
                "opacity": 0.5,
                "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
                "width": 8,
              }
            }
          >
            <Paper
              className="Dots-dot-3"
              classes={
                Object {
                  "elevation0": "MuiPaper-elevation0-6",
                  "elevation1": "MuiPaper-elevation1-7",
                  "elevation10": "MuiPaper-elevation10-16",
                  "elevation11": "MuiPaper-elevation11-17",
                  "elevation12": "MuiPaper-elevation12-18",
                  "elevation13": "MuiPaper-elevation13-19",
                  "elevation14": "MuiPaper-elevation14-20",
                  "elevation15": "MuiPaper-elevation15-21",
                  "elevation16": "MuiPaper-elevation16-22",
                  "elevation17": "MuiPaper-elevation17-23",
                  "elevation18": "MuiPaper-elevation18-24",
                  "elevation19": "MuiPaper-elevation19-25",
                  "elevation2": "MuiPaper-elevation2-8",
                  "elevation20": "MuiPaper-elevation20-26",
                  "elevation21": "MuiPaper-elevation21-27",
                  "elevation22": "MuiPaper-elevation22-28",
                  "elevation23": "MuiPaper-elevation23-29",
                  "elevation24": "MuiPaper-elevation24-30",
                  "elevation3": "MuiPaper-elevation3-9",
                  "elevation4": "MuiPaper-elevation4-10",
                  "elevation5": "MuiPaper-elevation5-11",
                  "elevation6": "MuiPaper-elevation6-12",
                  "elevation7": "MuiPaper-elevation7-13",
                  "elevation8": "MuiPaper-elevation8-14",
                  "elevation9": "MuiPaper-elevation9-15",
                  "root": "MuiPaper-root-4",
                  "rounded": "MuiPaper-rounded-5",
                }
              }
              component="div"
              elevation={0}
              square={false}
              style={
                Object {
                  "backgroundColor": "#fff",
                  "borderRadius": 16,
                  "height": 8,
                  "opacity": 0.5,
                  "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
                  "width": 8,
                }
              }
            >
              <div
                className="MuiPaper-root-4 MuiPaper-elevation0-6 MuiPaper-rounded-5 Dots-dot-3"
                style={
                  Object {
                    "backgroundColor": "#fff",
                    "borderRadius": 16,
                    "height": 8,
                    "opacity": 0.5,
                    "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
                    "width": 8,
                  }
                }
              />
            </Paper>
          </WithStyles(Paper)>
        </div>
        <WithStyles(Paper)
          className="Dots-dot-3"
          elevation={0}
          style={
            Object {
              "backgroundColor": "#fff",
              "borderRadius": 16,
              "height": 8,
              "left": 4,
              "marginTop": 4,
              "position": "absolute",
              "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
              "width": 8,
            }
          }
        >
          <Paper
            className="Dots-dot-3"
            classes={
              Object {
                "elevation0": "MuiPaper-elevation0-6",
                "elevation1": "MuiPaper-elevation1-7",
                "elevation10": "MuiPaper-elevation10-16",
                "elevation11": "MuiPaper-elevation11-17",
                "elevation12": "MuiPaper-elevation12-18",
                "elevation13": "MuiPaper-elevation13-19",
                "elevation14": "MuiPaper-elevation14-20",
                "elevation15": "MuiPaper-elevation15-21",
                "elevation16": "MuiPaper-elevation16-22",
                "elevation17": "MuiPaper-elevation17-23",
                "elevation18": "MuiPaper-elevation18-24",
                "elevation19": "MuiPaper-elevation19-25",
                "elevation2": "MuiPaper-elevation2-8",
                "elevation20": "MuiPaper-elevation20-26",
                "elevation21": "MuiPaper-elevation21-27",
                "elevation22": "MuiPaper-elevation22-28",
                "elevation23": "MuiPaper-elevation23-29",
                "elevation24": "MuiPaper-elevation24-30",
                "elevation3": "MuiPaper-elevation3-9",
                "elevation4": "MuiPaper-elevation4-10",
                "elevation5": "MuiPaper-elevation5-11",
                "elevation6": "MuiPaper-elevation6-12",
                "elevation7": "MuiPaper-elevation7-13",
                "elevation8": "MuiPaper-elevation8-14",
                "elevation9": "MuiPaper-elevation9-15",
                "root": "MuiPaper-root-4",
                "rounded": "MuiPaper-rounded-5",
              }
            }
            component="div"
            elevation={0}
            square={false}
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 16,
                "height": 8,
                "left": 4,
                "marginTop": 4,
                "position": "absolute",
                "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
                "width": 8,
              }
            }
          >
            <div
              className="MuiPaper-root-4 MuiPaper-elevation0-6 MuiPaper-rounded-5 Dots-dot-3"
              style={
                Object {
                  "backgroundColor": "#fff",
                  "borderRadius": 16,
                  "height": 8,
                  "left": 4,
                  "marginTop": 4,
                  "position": "absolute",
                  "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
                  "width": 8,
                }
              }
            />
          </Paper>
        </WithStyles(Paper)>
      </div>
    </div>
  </Dots>
</WithStyles(Dots)>
`;

exports[`custom dot color 1`] = `
<div
  style={
    Object {
      "width": 64,
    }
  }
>
  <div
    className="Dots-dots-1"
  >
    <div
      className="Dots-dotOuter-2"
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 0,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-31 MuiPaper-elevation0-33 MuiPaper-rounded-32 Dots-dot-3"
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 16,
            "height": 8,
            "opacity": 0,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      className="Dots-dotOuter-2"
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 16,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-31 MuiPaper-elevation0-33 MuiPaper-rounded-32 Dots-dot-3"
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 16,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      className="Dots-dotOuter-2"
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 32,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-31 MuiPaper-elevation0-33 MuiPaper-rounded-32 Dots-dot-3"
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 16,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      className="Dots-dotOuter-2"
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 48,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-31 MuiPaper-elevation0-33 MuiPaper-rounded-32 Dots-dot-3"
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 16,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      className="MuiPaper-root-31 MuiPaper-elevation0-33 MuiPaper-rounded-32 Dots-dot-3"
      style={
        Object {
          "backgroundColor": "red",
          "borderRadius": 16,
          "height": 8,
          "left": 4,
          "marginTop": 4,
          "position": "absolute",
          "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
          "width": 8,
        }
      }
    />
  </div>
</div>
`;

exports[`custom dot size 1`] = `
<div
  style={
    Object {
      "width": 96,
    }
  }
>
  <div
    className="Dots-dots-1"
  >
    <div
      className="Dots-dotOuter-2"
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 12,
          "left": 0,
          "padding": 6,
          "position": "absolute",
          "width": 12,
        }
      }
    >
      <div
        className="MuiPaper-root-31 MuiPaper-elevation0-33 MuiPaper-rounded-32 Dots-dot-3"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 16,
            "height": 12,
            "opacity": 0,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 12,
          }
        }
      />
    </div>
    <div
      className="Dots-dotOuter-2"
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 12,
          "left": 24,
          "padding": 6,
          "position": "absolute",
          "width": 12,
        }
      }
    >
      <div
        className="MuiPaper-root-31 MuiPaper-elevation0-33 MuiPaper-rounded-32 Dots-dot-3"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 16,
            "height": 12,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 12,
          }
        }
      />
    </div>
    <div
      className="Dots-dotOuter-2"
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 12,
          "left": 48,
          "padding": 6,
          "position": "absolute",
          "width": 12,
        }
      }
    >
      <div
        className="MuiPaper-root-31 MuiPaper-elevation0-33 MuiPaper-rounded-32 Dots-dot-3"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 16,
            "height": 12,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 12,
          }
        }
      />
    </div>
    <div
      className="Dots-dotOuter-2"
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 12,
          "left": 72,
          "padding": 6,
          "position": "absolute",
          "width": 12,
        }
      }
    >
      <div
        className="MuiPaper-root-31 MuiPaper-elevation0-33 MuiPaper-rounded-32 Dots-dot-3"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 16,
            "height": 12,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 12,
          }
        }
      />
    </div>
    <div
      className="MuiPaper-root-31 MuiPaper-elevation0-33 MuiPaper-rounded-32 Dots-dot-3"
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 16,
          "height": 12,
          "left": 6,
          "marginTop": 6,
          "position": "absolute",
          "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
          "width": 12,
        }
      }
    />
  </div>
</div>
`;
